2004-03-25  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec, config/Make-rpm.mk:
	  Changed tarball suffix from ".tgz" to ".tar.gz".

2004-03-24  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac, config/x_ac_check_pthreads.m4,
	  config/x_ac_reentrant.m4, src/munged/Makefile.am:
	  Added configure test to determine how to link against pthreads.

	* src/munged/crypto_thread.c, src/munged/crypto_thread.h:
	  Removed ifdef for HAVE_LIBPTHREAD.

2004-03-19  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c, src/munge/unmunge.c, src/munged/conf.c:
	  Minor tweaks for FreeBSD.

2004-03-18  Chris Dunlap  <cdunlap@llnl.gov>

	* bootstrap: Force replacement of existing bootstrap-related files.

	* config/mkinstalldirs: Updated with latest version from automake-1.8.

	* config/compile, config/config.guess, config/config.sub,
	  config/depcomp, config/install-sh, config/ltmain.sh, config/missing:
	  Nuked and updated with latest versions via the bootstrap script.
	  Fixes bug where the ".so" suffix disappeared from shared lib names.

2004-03-17  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.59, automake-1.8.3, libtool-1.5.2.

2004-03-16  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c, src/munge/unmunge.c, src/munged/conf.c,
	  src/munged/cred.c: Added dead store removal protection (ie, memburn).

	* src/munge/read.c(read_data_from_file): Removed unnecessary memset().

2004-03-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c, src/munged/enc_v1.c, src/munged/zip.c:
	  Fixed gcc 3.3.3 (Debian 20040306) compiler warnings under "-O2".

	* configure.ac, config/x_ac_reentrant.m4, src/munged/Makefile.am:
	  Moved _REENTRANT to top-level "config.h".

2004-03-11  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_check_cond_lib.m4, config/x_ac_check_peercred.m4,
	  config/x_ac_debug.m4, config/x_ac_gpl_licensed.m4,
	  config/x_ac_humor.m4, config/x_ac_meta.m4: Reformatted.
