@@ -1,5 +1,8 @@
 2004-03-25  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/munged.c(main):
+	  Changed logfile priority from LOG_DEBUG to LOG_NOTICE (if NDEBUG).
+
 	* munge.spec, config/Make-rpm.mk:
 	  Changed tarball suffix from ".tgz" to ".tar.gz".
 
